# Supply-chain-sec-scanner

./: README.md
supply-chain-sec-scanner/: .gitignore  CLAUDE.md  README.md  pyproject.toml
supply-chain-sec-scanner/examples/vulnerable-npm-app/: README.md  package-lock.json  package.json
supply-chain-sec-scanner/src/sc_scanner/: cache.py  cli.py  http.py  models.py  pipeline.py  risk_tier.py
supply-chain-sec-scanner/src/sc_scanner/graph/: models.py  npm_lock.py  npm_resolver.py  poetry_lock.py  pypi_resolver.py
supply-chain-sec-scanner/src/sc_scanner/heuristics/: install_scripts.py  metadata.py  models.py  scorer.py  typosquat.py
supply-chain-sec-scanner/src/sc_scanner/parsers/: base.py  npm.py  pip.py  poetry.py
supply-chain-sec-scanner/src/sc_scanner/report/: cli_table.py  html_report.py
supply-chain-sec-scanner/src/sc_scanner/scoring/: cvss.py  models.py  scorer.py
supply-chain-sec-scanner/tests/: fakes.py  test_cli.py  test_disk_cache.py  test_examples.py  test_graph_models.py  test_heuristic_scorer.py  test_install_scripts.py  test_metadata_heuristics.py  test_npm_lock_graph.py  test_npm_parser.py  test_npm_resolver.py  test_osv_client.py  test_pip_parser.py  test_pipeline.py  test_poetry_lock_graph.py  test_poetry_parser.py  test_pypi_resolver.py  test_report_cli_table.py  test_report_html.py  test_scoring_cvss.py  test_scoring_scorer.py  test_typosquat.py  test_vuln_matcher.py  test_vuln_models.py
supply-chain-sec-scanner/tests/fixtures/: package-lock-graph.json  package-lock.json  package.json  pyproject.toml  requirements.txt
(+6 files in other folders)
