[project]
name = "supply-chain-sec-scanner"
version = "0.1.0"
description = "Supply-chain security scanner: dependency graph, vulnerability matching, and malicious-package heuristics."
requires-python = ">=3.11"
dependencies = [
    "cvss>=3.6",
    "node-semver>=0.9.1",
    "packaging>=26.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "typer>=0.12",
]

[project.scripts]
sc-scan = "sc_scanner.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sc_scanner"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
