[tool.poetry]
name = "example-app"
version = "1.0.0"
description = "Fixture project for graph-builder tests."

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.7"
certifi = "^2024.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
